Find rcs2log in the source-directory when running uninstalled This is preparation for getting rid of lib-src's "stamp-*" files.
* lisp/vc/vc-rcs.el (vc-rcs-rcs2log-program): New.
(vc-rcs-update-changelog): Use it.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,8 @@
 2012-06-06  Glenn Morris  <rgm@gnu.org>
 
+	* vc/vc-rcs.el (vc-rcs-rcs2log-program): New.
+	(vc-rcs-update-changelog): Use it.
+
 	* emacs-lisp/authors.el (authors-fixed-entries): Remove vcdiff
 
 	* vc/vc-sccs.el (vc-sccs-write-revision): New function.
