Remove script stamping in lib-src/
rcs2log no longer needs it, and grep-changelog never really has
(nothing in Emacs runs that, I don't know why Emacs includes it, if you
are using an uninstalled out-of-tree build you can just as easily run
it from the source directory).

* lib-src/Makefile.in (STAMP_INST_SCRIPTS, STAMP_SCRIPTS, insrcdir)
(stamp-rcs2log, stamp-grep-changelog): Remove.
(all, clean): Remove references to stamps.

* .bzrignore: Do not ignore lib-src/stamp*.

--- a/lib-src/ChangeLog
+++ b/lib-src/ChangeLog
@@ -1,5 +1,9 @@
 2012-06-06  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (STAMP_INST_SCRIPTS, STAMP_SCRIPTS, insrcdir)
+	(stamp-rcs2log, stamp-grep-changelog): Remove.
+	(all, clean): Remove references to stamps.
+
 	* vcdiff: Remove file.
 	* Makefile.in (SCRIPTS, STAMP_SCRIPTS): Remove vcdiff.
 	(stamp-vcdiff): Remove.
