--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-06  Chong Yidong  <cyd@gnu.org>
+
+	* buffer.c (word_wrap): Doc fix.
+
 2012-06-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* xdisp.c (note_mode_line_or_margin_highlight): Pacify gcc -Wall.
