--- a/etc/NEWS
+++ b/etc/NEWS
@@ -101,6 +101,10 @@ that does not have its own specialized help text.
 *** You can now click mouse-3 in the coding system indicator to
 invokes `set-buffer-file-coding-system'.
 
++++
+** Setting `enable-remote-dir-locals' to non-nil allows directory
+local variables on remote hosts.
+
 
 * Editing Changes in Emacs 24.2
 
