--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-08  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* texinfo.tex: Merge from gnulib.
+
 2012-05-29  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* Makefile.in (echo-info): Don't try to install info files named
