--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-compat.el (tramp-compat-temporary-file-directory):
+	Avoid infloop.
+
 2012-06-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* startup.el (argv, argi): Make lexically scoped.
