icalendar / icalendar-tests: Fix Bug#11473 -- unescape commas in timezone specs
2012-06-08 Nick Dokos <nicholas.dokos@hp.com>

	* calendar/icalendar.el (icalendar--parse-vtimezone): Import TZID
	string properly, fixes Bug#11473.

2012-06-08  Ulf Jasper  <ulf.jasper@web.de>

	* automated/icalendar-tests.el (icalendar--parse-vtimezone): Test
	escaped commas in TZID (Bug#11473).
	(icalendar-import-with-timezone): New.
	(icalendar-real-world): Add new testcase as found in the bugreport
	of Bug#11473.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-08 Nick Dokos <nicholas.dokos@hp.com>
+
+	* calendar/icalendar.el (icalendar--parse-vtimezone): Import TZID
+	string properly, fixes Bug#11473.
+
 2012-06-08  Chong Yidong  <cyd@gnu.org>
 
 	* faces.el (set-face-attribute): Doc fix.
